--- a/ITWORKS/index.html
+++ b/ITWORKS/index.html
@@ -12,7 +12,8 @@
             <h1>Tandial Test Caller</h1>
             <input type='tel' pattern='d{10}' name='phone-number-input' id='dialed_number' class='form-input' autofocus='true' minlength='10' maxlength='10'>
             <label class='input-label' for='phone-number-input'>Phone Number</label>
-            <input type='button' onclick="makecall2(true)" class='btn' value='Call'>
+            <input id='call-btn' type='button' onclick="makecall2(true)" class='btn btn-start' value='Call'>
+            <input id='endcall-btn' type='button' onclick="endcall(true)" class='btn btn-end btn-hide' value='End Call'>
             <audio id="remoteAudio" autoplay=""></audio>
 	       <div id='output' />
         </div>
