Login session works
Enabled the site to have login work so we don't need to go to telegate
first to login in and use the site

--- a/ITWORKS/index.html
+++ b/ITWORKS/index.html
@@ -6,8 +6,14 @@
         <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
         <link rel="stylesheet" type="text/css" href="styles.css" />
         <script src="script.js"></script>
+        <script src="js/pbx.js"></script>
+        <script src="js/md5.js"></script>
+        <script src="js/welcome.js"></script>
+        
     </head>
     <body>
+        <input type="hidden" id="login_account" value="484" />
+        <input type="hidden" id="login_password" value="#484Tanda" />
         <div class='wrapper'>
             <h1>Tandial Test Caller</h1>
             <input type='tel' pattern='d{10}' name='phone-number-input' id='dialed_number' class='form-input' autofocus='true' minlength='10' maxlength='10'>
